Enable merging PDF files from directories and update README documentation